# agenticaiprojects

./: .gitignore  README.md  SETUP.md  TODOLIST.md  app.py  pyproject.toml
.github/workflows/: chatbot-app-hf.yml  deep-research-app-hf.yml  hf-keep-live.yml  travel-agent-app-hf.yml  trip-planner-api-hf.yml  trip-planner-app-hf.yml
_notebooks/: autogen_basics.ipynb  langchain_basics.ipynb  langchain_classification.ipynb  langchain_labeling.ipynb  langchain_rag_with_memory.ipynb  langchain_translator.ipynb  langchain_youtube_summerizer.ipynb  mcpserver_basics.ipynb  openai_agent.ipynb  openai_basics.ipynb
_notebooks/data/: deep_learning.txt  machine_learning.txt  python.txt
_notebooks/db/chroma_db/f255802a-5ca8-40e8-9ba6-8ae4d8c7a1de/: index_metadata.pickle
accessibility/: requirements.txt
accessibility/mcp/: server.py
accessibility/notebook/output/: accessibility_audit_20251112_061159.html
accessibility/output/: accessibility_dashboard_20251112_070331.html
accessibility/templates/: dashboard_template.html
chatbot/appagents/: InputValidationAgent.py  NewsAgent.py  OrchestratorAgent.py  SearchAgent.py
chatbot/core/: logger.py
chatbot/prompts/: trade_recommendation.txt
chatbot/tools/: google_tools.py  news_tools.py  time_tools.py
chatbot/ui/: app.py
deep-research/: README.md
deep-research/appagents/: guardrail_agent.py  orchestrator.py
deep-research/ui/: app.py
mcp-servers/: search-server.py
projects/accessibility/: Dockerfile  app.py
projects/accessibility/notebook/: accessibility.ipynb
projects/accessibility/output/: accessibility_dashboard_20251112_071804.html  accessibility_dashboard_20251112_072100.html
projects/chatbot/: Dockerfile  README.md
projects/chatbot/appagents/: FinancialAgent.py
projects/chatbot/prompts/: economic_news.txt  market_sentiment.txt  news_headlines.txt  upcoming_earnings.txt
projects/chatbot/tools/: yahoo_tools.py
projects/deep-research/: .env.name  Dockerfile  README.md  run.py
projects/deep-research/appagents/: email_agent.py  planner_agent.py  search_agent.py  writer_agent.py
projects/deep-research/core/: logger.py
projects/deep-research/tools/: google_tools.py
projects/deep-research/ui/: app.py
projects/healthcare-rag-db/: README.md
projects/stock-advisor/: README.md  SETUP.md  requirements.txt
projects/stock-advisor/agent_tools/: data_agent.py  fundamental_agent.py  sentiment_agent.py  strategy_agent.py  technical_agent.py
projects/stock-advisor/core/: memory_manager.py  orchestrator.py
projects/stock-advisor/tests/: test_app.py  test_orchestrator.py  test_utils.py
projects/stock-advisor/ui/: app.py
projects/stock-advisor/utils/: data_fetcher.py  visualization.py
projects/travel-agent/: README.md  test.py
projects/travel-agent/aagents/: __init__.py  budget_guardrail_agent.py  conversational_agent.py  flight_agent.py  hotel_agent.py  travel_agent.py
projects/travel-agent/contexts/: __init__.py  user_context.py
projects/travel-agent/output_types/: __init__.py  budget_analysis.py  flight_recommendation.py  hotel_recommendation.py  travel_plan.py
projects/travel-agent/test/: test_weather_tools.py
projects/travel-agent/tools/: __init__.py  flight.py  hotel.py  search.py  weather.py
projects/travel-agent/ui/: app.py  console.py
projects/trip-planner/: .hfignore  README.md  main.py  requirements-local.txt  requirements.1txt  streamlit_app.py
projects/trip-planner/app/: .hfignore
projects/trip-planner/config/: config.yaml
stock-advisor/: config.py  run.py
stock-advisor/agent_tools/: news_agent.py  portfolio_agent.py
stock-advisor/tests/: test_data_agent.py  test_data_fetcher.py  test_fundamental_agent.py  test_memory_manager.py  test_news_agent.py  test_portfolio_agent.py  test_sentiment_agent.py  test_strategy_agent.py  test_technical_agent.py
stock-advisor/utils/: helpers.py
trip-planner/: Dockerfile  requirements.txt
trip-planner/app/: README.md  app.py
trip-planner/utils/: model_loader.py
