[project]
name = "agents"
version = "0.1.0"
description = "Agentic AI project"
readme = "README.md"
requires-python = "==3.12.*"

dependencies = [
    # LLM Providers / SDKs
    "openai>=2.6.1",
    "openai-agents>=0.4.2",
    "anthropic>=0.49.0",
    "langchain-openai>=0.3.9",
    "langchain-anthropic>=0.3.10",
    "langchain_huggingface",
    "langchain_ollama",

    # LangChain / LangGraph Ecosystem
    "langchain>=0.3.0",
    "langchain-community>=0.3.20",
    "langchain-core>=0.3.0",
    "langchain-experimental>=0.3.4",
    "langgraph>=0.3.18",
    "langgraph-checkpoint-sqlite>=2.0.6",
    "langsmith>=0.3.18",
    "langchain_groq",

    # AutoGen
    "autogen-agentchat>=0.4.9.2",
    "autogen-ext[grpc,mcp,ollama,openai]>=0.4.9.2",

    # MCP (Model Context Protocol)
    "mcp-server-fetch>=2025.1.17",
    "mcp[cli]>=1.9.3",

    # Tools & Utilities
    "psutil>=7.0.0",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "aiohttp>=3.8.5",
    "httpx>=0.28.1",

    # Web Automation / Scraping
    "playwright>=1.51.0",
    "beautifulsoup4>=4.12.3",
    "lxml>=5.3.1",
    "wikipedia>=1.4.0",
    "yfinance>=0.2.27",
    "textblob>=0.17.1",

    # Visualization / UI
    "plotly>=6.0.1",
    "streamlit>=1.51.0",
    "reportlab",

    # PDF & Document Tools
    "pypdf>=5.4.0",
    "pypdf2>=3.0.1",

    # Youtube Video
    "yt_dlp",
    "openai-whisper",

    # Misc
    "polygon-api-client>=1.14.5",
    "sendgrid>=6.11.0",
    "semantic-kernel>=1.25.0",
    "speedtest-cli>=2.1.3",
    "smithery>=0.1.0",

    # Machine Learning
    "scikit-learn",
    "huggingface_hub<=1.1.4",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]

[build-system]
requires = ["setuptools>=78.1.0"]
build-backend = "setuptools.build_meta"
